--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Document</title>
 </head>
@@ -19,6 +19,38 @@
             <p>Enterprise</p>
         </div>
         <div class="line"></div>
+        <div class="toggle-wrapper">
+            <img src="images/icon1.png" alt="">
+            <div class="toggle">
+                <span>Mobile</span>
+                <span class="active">Web</span>
+            </div>
+            <img src="images/icon2.png" alt="">
+        </div>
+        <div class="sessions-card">
+            <p>Monthly Session</p>
+            <p class="number">20,000</p>
+        </div>
+        <p class="description">A session is a continuous period of user activity on your web app or website. Choose exactly how many sessions you wish to record and discard the extras.</p>
+        <div class="slider">
+            <div class="bar">
+                <div class="progress"></div>
+                <div class="point"></div>
+            </div>  
+            <div class="scale">
+                <ul>
+                    <li>0</li>
+                    <li>1K</li>
+                    <li>10K</li>
+                    <li>25K</li>
+                    <li>50K</li>
+                    <li>250K</li>
+                    <li>1M</li>
+                    <li>10M</li>
+                    <li>250M</li>
+                </ul>
+            </div>
+        </div>  
     </div>
 </body>
 </html>
